# desafio-nm-estagio-de-verao-2026

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/config/: settings.py
backend/app/models/: ai.py
backend/app/repositories/: ai.py
backend/app/routers/: auth.py  chat.py  report.py
backend/app/services/: embedding.py  query_rewriter.py  scraper.py
backend/app/utils/: ai.py  auth.py
backend/migrations/versions/: 42135c2e7372_.py  609fd7ee3d55_.py  93fa71276d73_.py  cf99400aa468_initial_migration.py  e46cfb8c5ee8_.py  e57742089c24_.py  ec8c3153f230_.py  initial_migration_.py
frontend/: README.md  next.config.js  package.json  pnpm-lock.yaml
frontend/src/actions/: auth.ts
frontend/src/app/: layout.tsx
frontend/src/app/(auth)/set-cookie-client/: route.ts
frontend/src/app/(auth)/sign-in/: page.tsx
frontend/src/app/(chat)/: layout.tsx
frontend/src/app/(chat)/chat/[id]/: page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/chat/[id]/: route.ts
frontend/src/app/api/set-cookie-client/: route.ts
frontend/src/app/auth/set-cookie-client/: route.ts
frontend/src/components/ai/: chat-sidebar-wrapper.tsx  chat-sidebar.tsx
frontend/src/components/auth/: LoginButton.tsx
frontend/src/components/ui/: sidebar.tsx
frontend/src/lib/: ai-sdk.ts  fastapi-client.ts  url.ts
frontend/src/lib/api/: ai.ts  auth.ts
frontend/src/lib/api-client.gen/.openapi-generator/: FILES
frontend/src/lib/api-client.gen/apis/: AuthApi.ts  ChatApi.ts
frontend/src/lib/api-client.gen/models/: ChatSummary.ts  ListChatsResponse.ts  index.ts
